<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--正常嵌入-->
    <PreferenceCategory
        android:title="@string/main_preference_inline">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/main_preference_title_checkbox"
            android:summary="@string/main_preference_summary_checkbox"/>
    </PreferenceCategory>

    <!--弹框-->
    <PreferenceCategory
        android:title="@string/main_preference_dialog_based">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/main_preference_title_edittext"
            android:summary="@string/main_preference_summary_edittext"
            android:dialogTitle="@string/main_preference_dialog_title_edittext"/>

        <ListPreference
            android:key="list_preference"
            android:title="@string/main_preference_title_list"
            android:summary="@string/main_preference_summary_list"
            android:entries="@array/main_preference_entries_list"
            android:entryValues="@array/main_preference_entryvalues_list"
            android:dialogTitle="@string/main_preference_dialog_title_list"/>
    </PreferenceCategory>

    <!--跳转-->
    <PreferenceCategory
        android:title="@string/main_preference_launch">

        <!-- This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state. -->
        <PreferenceScreen
            android:key="screen_preference"
            android:title="@string/main_preference_title_screen"
            android:summary="@string/main_preference_summary_screen">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:title="@string/main_preference_title_next_screen_toggle"
                android:summary="@string/main_preference_summary_next_screen_toggle"/>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="@string/main_preference_title_intent"
            android:summary="@string/main_preference_summary_intent">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com"/>
        </PreferenceScreen>
    </PreferenceCategory>

    <!--设置层级参数-->
    <PreferenceCategory
        android:title="@string/main_preference_attributes">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="@string/main_preference_title_parent"
            android:summary="@string/main_preference_summary_parent"/>

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/main_preference_title_child"
            android:summary="@string/main_preference_summary_child"/>
    </PreferenceCategory>
</PreferenceScreen>